fixed formatting issues with the 3 buttons, the gap now shrinks with page width and wraps when it can no longer shrink

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,8 @@
-body,
-html {
-    padding: 0;
-    margin: 0; 
-}
-
-
 body {
     height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     gap: 100px;
     background-color: #131421;
     color: white;
@@ -21,7 +13,6 @@ button {
     width: 300px;
     font-size: 40px;
     border: none;
-    margin: 50px;
     color: black;
 }
 
@@ -31,16 +22,23 @@ button:hover {
 
 .choices {
     display: flex;
+    justify-content: space-around;
+    padding: 50px;
+    gap: 10px;
     flex-wrap: wrap;
 }
 
 #score {
     font-size: 100px;
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
 }
 
 #results {
     font-size: 50px;
+    display: flex;
+    justify-content: center;
 }
 
 #rock {
